# docs/swagger.json
@@ -267,6 +267,50 @@
                 }
             }
         },
+        "/accounts/onboard": {
+            "post": {
+                "description": "Onboards an account by setting the finished_onboarding flag to true",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Onboard an account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Account ID",
+                        "name": "account_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.AccountResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/accounts/signin": {
             "post": {
                 "security": [
@@ -5190,6 +5234,18 @@
                 "account_id": {
                     "type": "string"
                 },
+                "address_line_1": {
+                    "type": "string"
+                },
+                "address_line_2": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
                 "display_name": {
                     "type": "string"
                 },
@@ -5221,6 +5277,9 @@
                 "picture_url": {
                     "type": "string"
                 },
+                "postal_code": {
+                    "type": "string"
+                },
                 "role": {
                     "type": "string",
                     "enum": [
@@ -5228,6 +5287,9 @@
                         "support",
                         "developer"
                     ]
+                },
+                "state_region": {
+                    "type": "string"
                 },
                 "supabase_id": {
                     "type": "string"
@@ -6031,6 +6093,18 @@
         "handlers.UpdateUserRequest": {
             "type": "object",
             "properties": {
+                "address_line_1": {
+                    "type": "string"
+                },
+                "address_line_2": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
                 "display_name": {
                     "type": "string"
                 },
@@ -6057,6 +6131,12 @@
                     "type": "string"
                 },
                 "picture_url": {
+                    "type": "string"
+                },
+                "postal_code": {
+                    "type": "string"
+                },
+                "state_region": {
                     "type": "string"
                 },
                 "status": {
@@ -6134,6 +6214,18 @@
                 "account_name": {
                     "type": "string"
                 },
+                "address_line_1": {
+                    "type": "string"
+                },
+                "address_line_2": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "integer"
                 },
@@ -6174,7 +6266,13 @@
                 "picture_url": {
                     "type": "string"
                 },
+                "postal_code": {
+                    "type": "string"
+                },
                 "role": {
+                    "type": "string"
+                },
+                "state_region": {
                     "type": "string"
                 },
                 "status": {
@@ -6222,6 +6320,18 @@
         "handlers.UserResponse": {
             "type": "object",
             "properties": {
+                "address_line_1": {
+                    "type": "string"
+                },
+                "address_line_2": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "integer"
                 },
@@ -6257,6 +6367,12 @@
                     "type": "string"
                 },
                 "picture_url": {
+                    "type": "string"
+                },
+                "postal_code": {
+                    "type": "string"
+                },
+                "state_region": {
                     "type": "string"
                 },
                 "status": {
